BUG 7838: (Mostly) prevent overlapping print content Remove some print-specific styles that just end up potentially screwing up the page, since DataSlate layouts are custom.
QA: Content shouldn't overlapping on print. URLs will no longer be
rendered in print, font and font size will be the same as the original
of the page, not modified for printing.

--- a/app/styles/print.sass
+++ b/app/styles/print.sass
@@ -4,14 +4,9 @@
 body
   background-color: white
   color: black
-  font: 12pt Georgia, "Times New Roman", Times, serif
-  line-height: 1.3
 a
   color: #333399
   text-decoration: underline
-  word-wrap: break-word
-  &[href^="http://"]:after, &[href^="https://"]:after, &[href^="/"]:after
-    content: " (" attr(href) ")"
 
 // not super-helpful on a dead tree
 .siteUserNav
